added interface logic is next

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="turn"></div>
-        <div class="board"></div>
-    <script src="script.js"></script>
-</body>
+      <h1 class="turn"></div>
+      <div class="board"></div>
+    </div>
+     <script src="script.js"></script>
+   </body>
 </html>
